# sjh-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG.private.md.example  README.md  README.zh-CN.md  README.zh.md  SKILL.md  SKILL.zh.md  pyproject.toml  skill-optimization-results.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
cmux/: README.md
cmux/references/: markdown.md
daily-summary/: README.zh.md
hooks/: hooks.json  post-knowledge-remind  run-hook.cmd
notion-lifeos/: LICENSE  README.md  SKILL.md
notion-lifeos/references/: advanced.md  api-guide.md
references/: api-guide.md  api-guide.zh.md  mcp-guide.md  mcp-guide.zh.md  notebooklm.md  query-guide.md  setup.md  setup.zh.md
scholar-agent/: README.md
scholar-agent/scholar_inbox/: cli.py
scholar-agent/tests/: test_cli.py  test_config.py
scholar_inbox/: __init__.py  api.py  auth.py  cli.py
scripts/: check_today_journal.sh  create-task.sh  eval_triggers.py  list_undone_tasks.sh  query-tasks.sh
skills/bibtex-fetch/: README.md  SKILL.md
skills/cmux/: README.md  README.zh-CN.md  README.zh.md  SKILL.md
skills/codex-review/: README.md  README.zh-CN.md  SKILL.md
skills/context-audit/: SKILL.md
skills/daily-summary/: README.md  README.zh-CN.md  SKILL.md
skills/experiment-registry/: SKILL.md
skills/handoff/: SKILL.md
skills/init-project/: README.md  README.zh-CN.md  SKILL.md
skills/notion-lifeos/: CONFIG.private.md.example  JEFF_SU_SUMMARY.md  README.md  README.zh-CN.md  README.zh.md  SKILL.md
skills/obsidian-brain/: SKILL.md
tests/: test_api.py
(+144 files in other folders)
